# a2a-registry

./: .gitignore  README.md  pyproject.toml
agent-examples/benjamin/: a2a_bridge.py  a2a_server.py  mcp_server.py
connect/: .gitignore  README.md  package-lock.json  package.json
connect/src/: cards.ts  client.ts  index.ts  ops.ts  server.ts  store.ts
connect/tests/: smoke.mjs
docs/: agent-registry-design.md
registry/: .gitignore  README.md  lambda_handler.py  package.json  pyproject.toml  requirements-lambda.txt  serverless.yml
registry/src/agent_registry/: __init__.py  a2a_client.py  cards.py  db.py  health.py  redis_cache.py  router.py  search.py  server.py  ui.py  weave_tracing.py
registry/tests/: smoke_test.py
registry/web/: index.html  package-lock.json  package.json  vite.config.js
registry/web/src/: main.jsx  styles.css
registry/web/src/components/ui/: alert.jsx  badge.jsx  button.jsx  card.jsx  input.jsx
