[project]
name = "a2a-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "openai-agents>=0.17.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "weave>=0.52.42",
]
