[project]
name = "agent-registry"
version = "0.1.0"
description = "MCP-queryable registry of A2A agents — register once, be discovered by every agent that speaks MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
agent-registry = "agent_registry.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_registry"]
